--- a/css/aquario.css
+++ b/css/aquario.css
@@ -57,6 +57,9 @@ nav ul li a{
 
 .coluna{
     flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cards{
@@ -83,7 +86,6 @@ button{
     border: 0;
     border-radius: 20px;
     outline: none;
-    margin-top: 30px;
 }
 
 .card{
@@ -104,11 +106,11 @@ button{
 }
 
 .card2{
-    background-image: url(../imagens_aquario/pexels-tom-fisk-1125979.jpg);
+    background-image: url(../imagens_aquario/pexels-los-muertos-crew-8838011.jpg);
 }
 
 .card3{
-    background-image: url(../imagens_aquario/pexels-los-muertos-crew-8838011.jpg);
+    background-image: url(../imagens_aquario/agua_salgada.jpg);
 }
 
 .card4{
@@ -126,4 +128,5 @@ h5{
 
 .card p{
     text-shadow: 0 0 15px #000;
+    font-size: small;
 }
