--- a/css/aquario.css
+++ b/css/aquario.css
@@ -36,6 +36,7 @@ nav ul li a{
     text-decoration: none;
     color: #fff;
     font-size: 13px;
+    font-weight: bold;
 }
 
 .logo{
@@ -69,23 +70,13 @@ nav ul li a{
 h1{
     color: #fff;
     font-size: 100px;
+    text-shadow: 0 0 13px rgb(0, 12, 63);
 }
 
 p{
     color: #fff;
     font-size: 11px;
     line-height: 15px;
-}
-
-button{
-    width: 180px;
-    color: #000;
-    font-size: 12px;
-    padding: 12px 0;
-    background: #fff;
-    border: 0;
-    border-radius: 20px;
-    outline: none;
 }
 
 .card{
@@ -95,10 +86,10 @@ button{
     border-radius: 10px;
     padding: 15px 25px;
     box-sizing: border-box;
-    cursor: pointer;
     margin: 10px 15px;
     background-position: center;
     background-size: cover;
+    transition: all 0.5s ease-in-out;
 }
 
 .card1{
@@ -129,4 +120,71 @@ h5{
 .card p{
     text-shadow: 0 0 15px #000;
     font-size: small;
+}
+
+/* media query */
+
+@media screen and (max-width: 1100px)
+{
+    .logo{
+        width: 40px;
+        cursor: pointer;
+    }
+
+    .menu-icon{
+        width: 25px;
+        cursor: pointer;
+        margin-left: 40px;
+    }
+
+    .row{
+        display: flex;
+        height: 88%;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .cards{
+        flex-basis: 50%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    nav ul li{
+        list-style: none;
+        display: inline-block;
+        margin-left: 60px;
+    }
+    
+    nav ul li a{
+        text-decoration: none;
+        color: #fff;
+        font-size: 13px;
+        font-weight: bold;
+    }
+    
+    h1{
+        color: fff;
+        font-size: 70px;
+        text-shadow: 0 0 13px rgb(0, 12, 63);
+    }
+
+    p{
+        display: none; 
+    }
+
+  .card
+   {
+    width: 130px;
+    height: 130px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 16px;
+    box-sizing: border-box;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 10px 15px;
+    background-position: center;
+    background-size: cover;
+   }
 }
