--- a/css/criacaopeixe.css
+++ b/css/criacaopeixe.css
@@ -60,27 +60,28 @@ h1{
     color: #fff
 }
 
+h3 {
+    color: #fff
+}
+
 p {
     color: #fff;
     text-align: justify;
+    padding: 40px;
 }
 
-.containers {
-    margin-top: 50px;
+.button{
     display: flex;
- }
-
-.flex-child img {
     justify-content: center;
-    max-width: 100%;
-    height: 390px;
 }
 
-.flex-child {
-    flex: 1;
- }
- 
-
- .flex-child:first-child {
-    margin-right: 20px;
- }
+button{
+    width: 180px;
+    color: #000;
+    font-size: 12px;
+    padding: 12px 0;
+    background: rgb(174, 212, 248);
+    border: 0;
+    border-radius: 20px;
+    outline: none;
+}
