--- a/css/tipospeixe.css
+++ b/css/tipospeixe.css
@@ -1,18 +1,31 @@
-.container{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(63, 92, 189);
-    background-position: center;
-    background-size: cover;
-    padding-left: 8%;
-    padding-right: 8%;
-    box-sizing: border-box;
-    border: none;
+/* video de fundo */
+
+.bg-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 
-body{
-    margin: 0;
-    padding: 0;
+@media (min-aspect-ratio: 16/9){
+    .bg-video{
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9){
+    .bg-video{
+        width: auto;
+        height: 100%;
+    }
+}
+
+/* header */
+
+.container{
+    padding-left: 8%;
+    padding-right: 8%;
 }
 
 .navbar{
@@ -36,6 +49,7 @@ nav ul li a{
     text-decoration: none;
     color: #fff;
     font-size: 13px;
+    font-weight: bold;
 }
 
 .logo{
@@ -51,12 +65,170 @@ nav ul li a{
     margin-left: 40px;
 }
 
+/* texto */
+
 h1{
     text-align: center;
-    color: #fff
+    color: #fff;
+    text-shadow: 0 0 13px rgb(0, 12, 63);
+}
+
+h3 {
+    color: #fff;
+    padding: 0 20px;
 }
 
 p {
     color: #fff;
     text-align: justify;
+    padding: 0 40px;
+}
+
+.texto_peixe {
+    padding: 0 60px;
+    margin-top: 0;
+}
+
+/* containers card */
+
+.containers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+ }
+
+
+/* cards */
+
+.row{
+    display: flex;
+    height: 88%;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.cards{
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.card
+{
+ width: 170px;
+ height: 170px;
+ display: inline-block;
+ border-radius: 10px;
+ padding: 16px;
+ box-sizing: border-box;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+ margin: 10px 15px;
+ background-position: center;
+ background-size: cover;
+}
+
+.card2{
+    background-image: url(../imagens_aquario/minitilapia.jpg);
+}
+
+.card5{
+    background-image: url(../imagens_aquario/raiaagua.jpeg);
+}
+
+.card6{
+    background-image: url(../imagens_aquario/lambaria.webp);
+}
+
+
+
+.card9{
+    background-image: url(../imagens_aquario/tainha.jpg);
+}
+
+
+.card11{
+    background-image: url(../imagens_aquario/cavala.jpg);
+}
+
+
+.card13{
+    background-image: url(../imagens_aquario/robalod.jpg);
+}
+
+.card:hover{
+    transform: translateY(-10px);
+}
+
+.card p{
+    text-align: center;
+    margin-top: 25px;
+    color: rgb(255, 255, 255);
+}
+
+/* containers de texto, introdução */
+
+.containers_texto {
+    display: flex;
+    justify-content: space-evenly;
+    /*! align-items: ; */
+    width: auto;
+    height: auto;
+    margin-right: 20px;
+    padding: 30px;
+    margin: 0;
+    padding: 0;
+ }
+
+ .psic{
+    margin-right: 30px;
+    width: 50%;
+ }
+
+ .infra{
+    margin-left: 30px;
+    width: 50%;
+ }
+
+ .aqua_img > img{
+    margin-top: 33px;
+    width: 180px;
+    text-align: left;
+    display: flex; 
+    margin-right: 50px;
+}
+
+
+/* media query */
+
+/* meia tela do notebook */
+
+@media screen and (max-width: 970px)
+{
+    .aqua_img{
+        display: none;
+    }
+
+
+    .containers {
+        display: flex;
+        align-items: center;
+     }
+
+    .card{
+        width: 110px;
+        height: 110px;
+        display: inline-block;
+        border-radius: 10px;
+        padding: 16px;
+        box-sizing: border-box;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin: 10px 15px;
+        background-position: center;
+        background-size: cover;
+    }
 }
